--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,11 @@
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 		</dependency>
+		<!-- For Jackson and Hibernate lazy issues -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-hibernate5</artifactId>
+		</dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -96,6 +101,5 @@
 			</plugin>
 		</plugins>
 	</build>
-
 
 </project>
